--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
     "@smastrom/react-rating": "^1.5.0",
+    "@types/js-cookie": "^3.0.6",
+    "js-cookie": "^3.0.5",
     "next": "15.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "9.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "18.3.14",
+    "@types/react-dom": "^18.2.14",
     "@types/react-redux": "^7.1.34",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
